<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inference_helper_sample_ros_interface</name>
  <version>0.0.0</version>
  <description>Interface definitions for InferenceHelper_Sample_ROS</description>
  <maintainer email="iwatake@todo.todo">iwatake</maintainer>
  <license>Apache-2.0 License </license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
